<resources>
    <string name="app_name">CardView_Demo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Mới</string>
    <string name="title_dashboard">Danh mục</string>
    <string name="title_saved">Lưu</string>
    <string name="title_setting">Cài đặt </string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_comments">Comments</string>
    <string name="contribute">Cảm ơn vì sự đóng góp của bạn ^^</string>
    <string name="send">Gửi</string>
    <string name="select_category"> Chọn hạng mục</string>
    <string name="name">Tên của bạn</string>
    <string name="content_contribute">Nội dung thủ thuật bạn muốn gửi cho chúng mình</string>
    <string name="title_contribute">Đóng góp nội dung</string>
    <string name="category">Danh mục</string>
    <string name="collect">Đã lưu</string>
</resources>
